src/CSS/styles.css
/* ... */
.main-heading h2::before{
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    height: 2px;
    background-color: #333;
    bottom: -30px;
    width: 120px;
}

.main-heading h2::after{
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 14px;
    height: 14px;
    border-radius: 50%;
    border: 2px solid #333;
    bottom: -38px;
    background-color: white;
}

.main-heading p{
    width: 550px;
    margin: 0 auto 100px;
    max-width: 100%;
    line-height: 2;
    color: #777;
}

.spikes{
    position: relative;
}

.spikes::after{
    content: "";
    position: absolute;
    right: 0;
    width: 100%;
    height: 30px;
    z-index: 1;
    background-image: linear-gradient(135deg, white 25%, transparent 25%),
    linear-gradient(225deg, white 25%, transparent 25%);
    background-size: 30px 30px;
}

.spikes_down{
    position: relative;
}

.spikes_down::after{
    content: "";
    position: absolute;
    right: 0;
    width: 100%;
    height: 30px;
    z-index: 1;
    background-image: linear-gradient(135deg, var(--section-background) 25%, transparent 25%),
    linear-gradient(225deg, var(--section-background) 25%, transparent 25%);
    background-size: 30px 30px;
}

/* end components */

/* start header */

.header{
    background-color: white;
    position: sticky;
    top: 0;
    z-index: 20;
    -webkit-box-shadow: 0 0 10px #ddd;
    -moz-box-shadow: 0 0 10px #ddd;
    box-shadow: 0 0 10px #ddd;
}

.header .container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    position: relative;
}

.header .logo{
    color: var(--main-color);
    font-size: 26px;
    font-weight: bold;
    height: 72px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
}

@media (max-width: 767px) {
    .header .logo{
        width: 100%;
        height: 50px;
    }
}

.header .logo img{
    width: 195px;
    padding-right: 5px;
}

.header .main-nav{
    display: flex;
}

@media (max-width: 767px) {
    .header .main-nav{
        margin: auto;
    }
}

.header .main-nav > li{
    position: relative;
}

.header .main-nav > li > a{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 72px;
    position: relative;
    color: black;
    padding: 0 30px;
    transition: var(--main-transition);
    overflow: hidden;
}

@media (max-width: 767px) {
    .header .main-nav > li > a{
        padding: 10px;
        font-size: 14px;
        height: 40px;
    }
}

.header .main-nav > li > a::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 4px;
    background-color: var(--main-color);
    top: 0;
    left: -100%;
    transition: var(--main-transition);
}

.header .main-nav > li > a:hover{
    color: var(--main-color);
    background-color: #fafafa;
}

.header .main-nav > li > a:hover::before{
    left: 0;
}

.header .main-nav > li:hover .mega-menu{
    opacity: 1;
    visibility: visible;
    top: calc(100% + 1px);
}

.header .main-nav .mega-menu-head{
    display: flex;
    align-items: center;
    position: relative;
    overflow: hidden;
}

.header .main-nav .mega-menu-head svg {
    font-size: 12px;
    padding-right: 20px;
}

.header .main-nav .mega-menu-head a{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 72px;
    position: relative;
    color: black;
    padding: 0 30px;
    transition: var(--main-transition);
    overflow: hidden;
    padding-right: 8px;
}

@media (max-width: 767px) {
    .header .main-nav .mega-menu-head a{
        padding: 10px;
        padding-right: 4px;
        font-size: 14px;
        height: 40px;
    }
    .header .main-nav .mega-menu-head svg{
        padding-right: 5px;
    }
}

.header .main-nav .mega-menu-head::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 4px;
    background-color: var(--main-color);
    top: 0;
    left: -100%;
    transition: var(--main-transition);
    z-index: 5;
}

.header .main-nav li:hover .mega-menu-head::before{
    left: 0;
}

.header .main-nav li:hover .mega-menu-head {
    background-color: #fafafa;
}

.header .main-nav .mega-menu-head a::before{
    display: none;
}


/* start Megamenu */

.header .mega-menu{
    position: absolute;
    width: 250px;
    left: 0;
    padding: 10px;
    background-color: white;
    z-index: 100;
    display: flex;
    gap: 40px;
    top: calc(100% + 50px);
    transition: top var(--main-transition), opacity var(--main-transition);
    opacity: 0;
    visibility: hidden;
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
    border: 1px solid #eee;
    border-top: none;
    border-bottom: 3px solid var(--main-color);
}

@media (max-width: 767px) {
    .header .mega-menu{
        flex-direction: column;
        gap: 0;
        padding: 5px;
    }
}


.header .mega-menu .links{
    min-width: 150px;
    flex: 1;
}

.header .mega-menu .links li{
    position: relative;
}

.header .mega-menu .links li:not(:last-child){
    border-bottom: 1px solid #e9e6e6;
}

@media (max-width: 767px) {
    .header .mega-menu .links:first-of-type li:last-child{
        border-bottom: 1px solid #e9e6e6;
    }
}

.header .mega-menu .links li::before{
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 0;
    height: 100%;
    background-color: #FAFAFA;
    z-index: -1;
    transition: var(--main-transition);
}

.header .mega-menu .links li:hover::before{
    width: 100%;
}

.header .mega-menu .links li a{
    color: var(--main-color);
    padding: 15px;
    display: block;
    font-size: 18px;
    font-weight: bold;
}

.header .mega-menu .links li a i{
    margin-right: 10px;
}

/* end Megamenu */

/* end header */

/* start landing */

.landing{
    position: relative;
    min-height: 100vh;
    /* display: flex; */
    /* flex-wrap: wrap; */
    padding-bottom: 50px;
}
/* ... */

